crates/preprocessor/tests/snapshots/main__define_expansion_1-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      17,
      14,
      17
    ],
    [
      18,
      21,
      18,
      21
    ],
    [
      22,
      23,
      22,
      23
    ],
    [
      27,
      28,
      25,
      26
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 24,
        "end": 27
      },
      "expanded_range": {
        "start": 23,
        "end": 25
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
