crates/preprocessor/tests/snapshots/main__define_expansion_2-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      18,
      12,
      18
    ],
    [
      19,
      23,
      19,
      23
    ],
    [
      24,
      27,
      24,
      27
    ],
    [
      27,
      28,
      27,
      28
    ],
    [
      28,
      30,
      28,
      30
    ],
    [
      30,
      31,
      30,
      31
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      37,
      38,
      40,
      41
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 34,
        "end": 37
      },
      "expanded_range": {
        "start": 33,
        "end": 40
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
