crates/preprocessor/tests/snapshots/main__define_expansion_comment_1-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      23,
      14,
      23
    ],
    [
      24,
      27,
      24,
      27
    ],
    [
      28,
      31,
      28,
      31
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      37,
      38,
      35,
      36
    ],
    [
      38,
      39,
      36,
      37
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 34,
        "end": 37
      },
      "expanded_range": {
        "start": 33,
        "end": 35
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
