crates/preprocessor/tests/snapshots/main__define_expansion_comment_1.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 480
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO 1 //comment
int foo = 1;

