crates/preprocessor/tests/snapshots/main__define_expansion_comment_2-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      27,
      14,
      27
    ],
    [
      28,
      31,
      28,
      31
    ],
    [
      32,
      35,
      32,
      35
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      41,
      42,
      39,
      40
    ],
    [
      42,
      43,
      40,
      41
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 38,
        "end": 41
      },
      "expanded_range": {
        "start": 37,
        "end": 39
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
