crates/preprocessor/tests/snapshots/main__define_expansion_comment_3-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      33,
      14,
      33
    ],
    [
      34,
      37,
      34,
      37
    ],
    [
      38,
      41,
      38,
      41
    ],
    [
      42,
      43,
      42,
      43
    ],
    [
      47,
      48,
      45,
      46
    ],
    [
      49,
      49,
      47,
      47
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 44,
        "end": 47
      },
      "expanded_range": {
        "start": 43,
        "end": 45
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
